--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@prisma/client": "4.13.0",
-    "prisma": "^4.13.0"
+    "prisma": "^4.13.0",
+    "slugify": "^1.6.6"
   }
 }
